[project]
name = "heimdall"
version = "0.1.0"
description = "command-line utility for secure and efficient file encryption and storage."
authors = [
    {name = "amin masoudi",email = "aminmasoudi2003@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pycrypto (>=2.6.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
heimdall = "heimdall:cli"
